# sa3-inpainter-ui

./: IDEAS.md  README.md  pyproject.toml
backend/: captioner.py  server.py  train_lora.py  train_lora_compiled.py
mlx_sa3/: lora.py  pre_encode_mlx.py  train_lora_mlx.py
webui/: package-lock.json  package.json
webui/src/: App.svelte  app.css
webui/src/lib/: BottomBar.svelte  BrowserView.svelte  MainCanvas.svelte  OverviewWave.svelte  RightRail.svelte  SettingsView.svelte  SparkLine.svelte  SpecCanvas.svelte  TimeAxis.svelte  Toast.svelte  TopBar.svelte  TrainerView.svelte  WaveformOverlay.svelte  session.svelte.js  spec_worker.js
webui/src/lib/_spec_v1_backup/: SpecCanvas.svelte  spec_worker.js
